# slam-rgbd_slam

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  CameraRockRGBD.cpp  CameraRockRGBD.hpp  Dummy.cpp  Dummy.hpp  Main.cpp  MapBuilder.cpp  MapBuilder.hpp  RtabmapRock.cpp  RtabmapRock.hpp
test/: CMakeLists.txt  test_Dummy.cpp
